@@ -5,6 +5,7 @@
     * 0814 Agent versions can now be checked with "at least version X" parameters...
     * 0815 mysql_slave: New check for monitoring MySQL slave sync state
     * 0616 FIX: brocade.fan, brocade.power, brocade.temp: will now only discover services which are not marked as absent
+    * 0992 FIX: zfs_arc_cache: returns OK even if values of arc meta are missing...
 
     Multisite:
     * 0934 FIX: Logwatch messages with class unknown ( 'u' ) now displayed as WARN...
